<resources>
    <string name="app_name">balo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account">Tài khoản</string>
    <string name="info">Hồ sơ</string>
    <string name="order">Đơn hàng</string>
    <string name="cart">Giỏ hàng</string>
    <string name="contact">Liên hệ</string>
    <string name="favorite">Yêu thích</string>
    <string name="empty_favorite">Chưa có sản phẩm yêu thích</string>
    <string name="search_something">Bạn đang tìm sản phẩm gì?</string>
    <string name="no_account">Bạn chưa có tài khoản?</string>
    <string name="sign_up">Đăng ký ngay</string>
    <string name="login">Đăng nhập</string>
    <string name="you_need_login">Bạn cần đăng nhập để bắt đầu sử dụng</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="forgot_pass">Quên mật khẩu?</string>
    <string name="have_account">Bạn đã có tài khoản</string>
    <string name="sign_in">Đăng nhập ngay!</string>
    <string name="register">Đăng ký</string>
    <string name="please_fill_all">Điền đầy đủ thông tin để tạo tài khoản mới</string>
    <string name="username">Tên gọi</string>
    <string name="otp">Mã xác nhận</string>
    <string name="phone_exist">Số điện thoại này đã đăng ký tài khoản. Hãy dùng số điện thoại khác!!</string>
    <string name="try_again">Bạn hãy thử lại!!!</string>
    <string name="otp_wrong">Mã xác thực không đúng!! Vui lòng thử lại</string>
    <string name="enter_otp">Vui lòng nhập mã xác thực</string>
    <string name="password_confirm_wrong">Mật khẩu xác nhận không đúng</string>
    <string name="send_otp_again">Gửi lại mã xác nhận</string>
    <string name="register_success">Đăng ký thành công!!</string>
    <string name="error">Error</string>
    <string name="phone">Số điện thoại</string>
    <string name="account_not_true">Số điện thoại hoặc mật khẩu không chính xác</string>
    <string name="please_fill_login">Vui lòng điền đầy đủ thông tin để đăng nhập!</string>
    <string name="update_password_success">Update password success</string>
    <string name="update_pass">Cập nhật mật khẩu</string>
    <string name="please_fill_pass">Vui lòng nhập đầy đủ thông tin để lấy lại mật khẩu</string>
    <string name="new_password">Mật khẩu mới</string>
    <string name="update">Cập nhật</string>
    <string name="please_enter_phone">Vui lòng nhập số điện thoại!</string>
    <string name="account_not_register">Số điện thoại này chưa đăng ký tài khoản</string>
    <string name="brand">Thương hiệu</string>
    <string name="category">Loại sản phẩm</string>
    <string name="address">Địa chỉ</string>
    <string name="update_info">Đổi thông tin</string>
    <string name="update_password">Đổi mật khẩu</string>
    <string name="product">Sản phẩm</string>
    <string name="new_category">Thêm loại balo</string>
    <string name="please_fill_category">Vui lòng điền đầy đủ thông tin để tạo loại balo mới</string>
    <string name="name_category">Loại balo</string>
    <string name="add_pic">Chọn ảnh</string>
    <string name="add">Thêm</string>
    <string name="new_brand">Thêm thương hiệu</string>
    <string name="please_fill_brand">Vui lòng điền đầy đủ thông tin để thêm thương hiệu mới</string>
    <string name="name_brand">Thương hiệu</string>
    <string name="des">Mô tả</string>
    <string name="see_all">Xem tất cả</string>
    <string name="new_balo">Thêm balo</string>
    <string name="please_fill_balo">Vui lòng điền đầy đủ thông tin để thêm sản phẩm mới</string>
    <string name="name_product">Tên sản phẩm</string>
    <string name="price_import">Giá nhập</string>
    <string name="price_sell">Giá bán</string>
    <string name="quantity">Số lượng</string>
    <string name="bill">Hóa đơn</string>
    <string name="time">Thời gian</string>
    <string name="revenue">Doanh thu</string>
    <string name="inventory">Tồn kho</string>
    <string name="name_store">Kem Store</string>
    <string name="client">Khách hàng</string>
    <string name="login_later">Đăng nhập sau</string>
    <string name="permission">Quyền truy cập thư viện</string>
    <string name="you_must">Bạn phải cấp quyền truy cập thư viện để chọn ảnh từ thư viện!</string>
    <string name="goto_setting">Đi đến cài đặt</string>
    <string name="cancel">Hủy</string>
    <string name="success_category">Tạo tới loại sản phẩm thành công!</string>
    <string name="success_brand">Thêm thương hiệu mới thành công!</string>
    <string name="please_fill_all_info">Vui lòng điền đầy đủ thông tin!</string>
    <string name="update_brand">Cập nhật thương hiệu thành công!</string>
    <string name="delete">Delete</string>
    <string name="delete_suceess">Đã xóa thành công!!</string>
    <string name="exit_app">Thoát ứng dụng</string>
    <string name="exit_app_message">Bạn có muốn thoát ứng dụng không?</string>
    <string name="no">Không</string>
    <string name="yes">Có</string>
    <string name="confirm">Xác nhận</string>
    <string name="delete_brand_mess">Bạn có muốn xóa thương hiệu này không?</string>
    <string name="update_product">Cập nhật sản phẩm thành công!</string>
    <string name="choose">Chọn</string>
    <string name="click_to_choose">Nhấn để chọn</string>
    <string name="you_need_choose_brand">Bạn cần phải chọn thương hiệu</string>
    <string name="need_enter_more_2">Cần nhập nhiều hơn 1 ký tự để tìm kiếm</string>
    <string name="add_cart">Thêm vào giỏ hàng</string>
    <string name="buy_now">Mua ngay</string>
    <string name="rate">Đánh giá</string>
    <string name="sold">Đã bán</string>
    <string name="sold_out">Hết hàng</string>
    <string name="add_success_cart">Thêm vào giỏ hàng thành công!</string>
    <string name="cart_exits">Sản phẩm đã có trong giỏ hàng</string>
    <string name="cart_full">Giỏ hàng đã đầy!!</string>
    <string name="empty_cart">Chưa có sản phẩm nào trong giỏ hàng</string>
    <string name="total">Tổng</string>
    <string name="buy">Mua</string>
    <string name="delete_confirm">Bạn có muốn xóa không?</string>
    <string name="you_not_choose_cart">Bạn cần phải chọn sản phẩm để mua</string>
    <string name="log_out">Đăng xuất</string>
    <string name="password_confirm">Xác nhận mật khẩu</string>
    <string name="not_fill_all">Vui lòng nhập đủ thông tin!</string>
    <string name="wrong_password">Mật khẩu không đúng</string>
    <string name="address_shop">Địa chỉ: 54 Nguyễn Lương Bằng, Hòa Khánh Bắc, Liên Chiểu, Đà Nẵng</string>
    <string name="choose_address">Chọn địa chỉ</string>
    <string name="empty_address">Chưa có địa chỉ nào</string>
    <string name="new_address">Địa chỉ mới</string>
    <string name="city">Tỉnh/Thành phố</string>
    <string name="quan_huyen">Quận/Huyện</string>
    <string name="phuong_xa">Phường/Xã</string>
    <string name="address_detail">Tên đường/Tòa nhà/Số nhà</string>
    <string name="enter_address_detail">Nhập chi tiết địa chỉ</string>
    <string name="address_success">Thêm địa chỉ thành công!</string>
    <string name="add_buy">Địa chỉ nhận hàng</string>
    <string name="order_list">Danh sách sản phẩm</string>
    <string name="payment_detail">Chi tiết thanh toán</string>
    <string name="total_order">Tổng tiền hàng</string>
    <string name="total_ship">Phí vận chuyển</string>
    <string name="total_pay">Tổng thanh toán</string>
    <string name="wait_confirm">Chờ xác nhận</string>
    <string name="wait_package">Đang đóng gói</string>
    <string name="wait_ship">Chờ giao hàng</string>
    <string name="ship_success">Giao hàng thành công</string>
    <string name="order_cancel">Đơn hàng bị huỷ</string>
    <string name="detail">Chi tiết</string>
    <string name="pay">Thành tiền</string>
    <string name="order_detail">Chi tiết đơn hàng</string>
    <string name="cancel_mess">Bạn có muốn hủy không?</string>
    <string name="success">Hoàn thành</string>
    <string name="comment">Bình luận</string>
    <string name="user">Người dùng</string>
    <string name="date">Ngày</string>
    <string name="status">Trạng thái</string>
    <string name="empty_bill">Chưa có hóa đơn</string>
    <string name="all">Tất cả</string>
    <string name="none_sell">Sản phẩm chưa có lượt bán</string>
    <string name="hot_sell">Sản phẩm bán chạy</string>
    <string name="none_product">Chưa có sản phẩm nào</string>
    <string name="edit">Chỉnh sửa</string>
    <string name="number_import">Số lượng nhập</string>
    <string name="current_quantity">Tổng sản phẩm hiện tại</string>
    <string name="profit">Lợi nhuận</string>
    <string name="product_sell">Sản phẩm bán ra</string>
    <string name="your_filter">Bộ lọc của bạn</string>
    <string name="clear">Bỏ bộ lọc</string>
    <string name="sort">Sắp xếp</string>
    <string name="AZ">A...Z</string>
    <string name="ZA">Z...A</string>
    <string name="filter">Bộ lọc</string>
    <string name="notification">Thông báo</string>
    <string name="name_ship">Tên người nhận</string>
    <string name="enter_name_ship">Nhập tên người nhận</string>
    <string name="enter_phone">Nhập số điện thoại</string>
    <string name="auth">Mã cá nhân</string>
    <string name="update_success">Cập nhật thành công</string>
    <string name="zalopay">Thanh toán</string>
    <string name="refund">Hoàn tiền</string>
</resources>