<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_bg"
    android:elevation="8dp"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/update_info"
        android:textColor="@color/color_button"
        android:textSize="24dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:background="@drawable/bg_option"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="20dp"
        android:hint="@string/password"
        android:padding="20dp"
        android:inputType="textPassword"
        android:textColor="@color/color_text"
        android:textColorHint="@color/color_hint" />

    <EditText
        android:id="@+id/edtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_option"
        android:drawableStart="@drawable/ic_user"
        android:drawablePadding="20dp"
        android:hint="@string/username"
        android:padding="20dp"
        android:textColor="@color/color_text"
        android:textColorHint="@color/color_hint" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:background="@drawable/bg_option"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="20dp"
        android:hint="@string/email"
        android:padding="20dp"
        android:textColor="@color/color_text"
        android:textColorHint="@color/color_hint" />

    <EditText
        android:id="@+id/edtAuth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_option"
        android:drawableStart="@drawable/ic_key"
        android:drawablePadding="20dp"
        android:hint="@string/auth"
        android:padding="20dp"
        android:textColor="@color/color_text"
        android:textColorHint="@color/color_hint" />

    <TextView
        android:id="@+id/tvError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/not_fill_all"
        android:textAlignment="center"
        android:textColor="@color/error"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_btn"
        android:elevation="4dp"
        android:fontFamily="@font/nunito_bold"
        android:padding="8dp"
        android:text="@string/confirm"
        android:textColor="@color/color_bg"
        android:textSize="16dp" />

</LinearLayout>