<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="20dp">

    <Button
        android:id="@+id/btnRevenue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:background="@drawable/bg_option"
        android:elevation="4dp"
        android:fontFamily="@font/nunito_bold"
        android:paddingHorizontal="16dp"
        android:text="@string/revenue"
        android:textColor="@color/color_bg"
        android:textSize="16dp" />

    <Button
        android:id="@+id/btnProfit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:background="@drawable/bg_option"
        android:elevation="4dp"
        android:fontFamily="@font/nunito_bold"
        android:paddingHorizontal="16dp"
        android:text="@string/profit"
        android:textColor="@color/color_bg"
        android:textSize="16dp" />

    <Button
        android:id="@+id/btnSell"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:background="@drawable/bg_option"
        android:elevation="4dp"
        android:fontFamily="@font/nunito_bold"
        android:paddingHorizontal="16dp"
        android:text="@string/product_sell"
        android:textColor="@color/color_bg"
        android:textSize="16dp" />

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:background="@drawable/bg_btn"
        android:elevation="4dp"
        android:fontFamily="@font/nunito_bold"
        android:paddingHorizontal="16dp"
        android:text="@string/confirm"
        android:textColor="@color/color_bg"
        android:textSize="16dp" />

</LinearLayout>