<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg"
    android:fitsSystemWindows="true">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/new_balo"
                android:textColor="@color/color_text"
                android:textSize="30dp"
                app:layout_constraintTop_toBottomOf="@id/imgBack" />

            <TextView
                android:id="@+id/tvDes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/please_fill_balo"
                android:textColor="@color/color_hint"
                android:textSize="16dp"
                app:layout_constraintTop_toBottomOf="@id/tvTitle"
                tools:layout_editor_absoluteX="20dp" />

            <EditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/bg_option"
                android:drawableStart="@drawable/ic_balo"
                android:drawablePadding="20dp"
                android:hint="@string/name_product"
                android:padding="20dp"
                android:textColor="@color/color_text"
                android:textColorHint="@color/color_hint"
                app:layout_constraintTop_toBottomOf="@id/tvDes" />

            <TextView
                android:id="@+id/tvBrand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_option"
                android:drawableStart="@drawable/ic_brand"
                android:drawablePadding="20dp"
                android:gravity="center_vertical"
                android:padding="20dp"
                android:text="@string/click_to_choose"
                android:textColor="@color/color_text"
                android:textColorHint="@color/color_hint"
                app:layout_constraintTop_toBottomOf="@id/edtName" />

            <EditText
                android:id="@+id/edtPriceImport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_option"
                android:drawableStart="@drawable/ic_category"
                android:drawablePadding="20dp"
                android:hint="@string/price_import"
                android:inputType="number"
                android:padding="20dp"
                android:textColor="@color/color_text"
                android:textColorHint="@color/color_hint"
                app:layout_constraintTop_toBottomOf="@id/tvBrand" />

            <EditText
                android:id="@+id/edtPriceSell"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_option"
                android:drawableStart="@drawable/ic_category"
                android:drawablePadding="20dp"
                android:hint="@string/price_sell"
                android:inputType="number"
                android:padding="20dp"
                android:textColor="@color/color_text"
                android:textColorHint="@color/color_hint"
                app:layout_constraintTop_toBottomOf="@id/edtPriceImport" />

            <EditText
                android:id="@+id/edtQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_option"
                android:drawableStart="@drawable/ic_category"
                android:drawablePadding="20dp"
                android:hint="@string/quantity"
                android:inputType="number"
                android:padding="20dp"
                android:textColor="@color/color_text"
                android:textColorHint="@color/color_hint"
                app:layout_constraintTop_toBottomOf="@id/edtPriceSell" />

            <EditText
                android:id="@+id/edtDes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_option"
                android:drawableStart="@drawable/ic_category"
                android:drawablePadding="20dp"
                android:hint="@string/des"
                android:padding="20dp"
                android:textColor="@color/color_text"
                android:textColorHint="@color/color_hint"
                app:layout_constraintTop_toBottomOf="@id/edtQuantity" />

            <TextView
                android:id="@+id/tvImport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_option"
                android:drawableStart="@drawable/ic_import"
                android:drawablePadding="20dp"
                android:elevation="20dp"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:paddingHorizontal="20dp"
                android:text="@string/add_pic"
                android:textColor="@color/color_text"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/edtDes" />

            <ImageView
                android:id="@+id/imgPic"
                android:layout_width="250dp"
                android:layout_height="200dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_option"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="20dp"
                android:hint="@string/password"
                android:padding="20dp"
                android:src="@drawable/ic_picture"
                android:textColor="@color/color_text"
                android:textColorHint="@color/color_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvImport" />

            <TextView
                android:id="@+id/tvError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="16dp"
                android:text="@string/please_fill_all_info"
                android:textAlignment="center"
                android:textColor="@color/error"
                android:visibility="invisible"
                app:layout_constraintTop_toBottomOf="@id/imgPic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvError">

                <Button
                    android:id="@+id/btnDelete"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_option"
                    android:elevation="10dp"
                    android:fontFamily="@font/nunito_bold"
                    android:padding="16dp"
                    android:text="@string/delete"
                    android:textColor="@color/color_bg"
                    android:textSize="16dp"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/btnAdd"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_btn"
                    android:elevation="10dp"
                    android:fontFamily="@font/nunito_bold"
                    android:padding="16dp"
                    android:text="@string/add"
                    android:textColor="@color/color_bg"
                    android:textSize="16dp" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
